fixing edit icon size on mobile

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -21,6 +21,7 @@
 
 @media (max-width: 320px) {
     .profile__edit-button {
+        background-image: url('../../../images/profile__edit_button_mobile.svg');
         width: 18px;
         height: 18px;
         top: -6px;
